Bug 962878 - 1. Reduce the two successive PushBlobRunnable at the end of recording to one. 2. Refine the code flow in Session:Extract for the accuracy of the blob time. r=roc